--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -1442,7 +1442,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Load the pickle file\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
